code with dashbord

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer>
     <div class="container-fluid">
-        <nav class="pull-left">
+        <!--<nav class="pull-left">
             <ul>
                 <li>
                     <a href="#">
@@ -23,9 +23,11 @@
                     </a>
                 </li>
             </ul>
-        </nav>
+        </nav>-->
         <p class="copyright pull-right">
-            &copy; {{test | date: 'yyyy'}} <a href="http://www.creative-tim.com">Creative Tim</a>, made with love for a better web
+            &copy;   Please note that while you are reviewing any information on this website, the information is posted as of the dates listed.
+            Reddy Ice has no obligation to update the information in the email alerts or otherwise from this website, which
+            speak as of their respective dates.
         </p>
     </div>
 </footer>
