--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -69,11 +69,13 @@
                 </div>
                 <div class="card-content table-responsive">
                     <select class="form-control">
-							  <option value="volvo">07/24/2017</option>
-							  <option value="saab">07/25/2017</option>
-							  <option value="opel">07/23/2017</option>
-							  <option value="audi">07/22/2017</option>
-							</select>
+                        <option value="volvo">07/24/2017</option>
+                        <option value="saab">07/25/2017</option>
+                        <option value="opel">07/23/2017</option>
+                        <option value="audi">07/22/2017</option>
+                    </select>
+                    <pie-chart></pie-chart>
+                    <line-chart></line-chart>
                     <div>
                         <svg height="120" width="120">
                             <defs>
