--- a/src/app/dashboard/table/table.component.html
+++ b/src/app/dashboard/table/table.component.html
@@ -1,4 +1,4 @@
-<div class="main-content">
+<!-- <div class="main-content">
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
@@ -128,4 +128,7 @@
             </div>
         </div>
     </div>
+</div> -->
+<div class="main-content">
+<h1 style="margin-bottom:100%">In progress...</h1>
 </div>
