--- a/src/app/dashboard/typography/typography.component.html
+++ b/src/app/dashboard/typography/typography.component.html
@@ -1,4 +1,4 @@
-<div class="main-content">
+<!-- <div class="main-content">
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-12">
@@ -92,4 +92,5 @@
         </div>
     </div>
 </div>
-</div>
+</div> -->
+<h1 style="margin-bottom:100%">In progress...</h1>
