--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -11,7 +11,7 @@
 
     </div>
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-6">
             <div class="card">
                 <div class="card-header" data-background-color="red">
                     <h4 class="title"> Today's Route </h4>
@@ -54,6 +54,30 @@
                                 <td>11</td>
                                 <td class="text-danger">145.21</td>
                             </tr>
+                              <tr>
+                                <td>891</td>
+                                <td>381</td>
+                                <td>16</td>
+                                <td class="text-danger">145.21</td>
+                            </tr>
+                              <tr>
+                                <td>891</td>
+                                <td>381</td>
+                                <td>18</td>
+                                <td class="text-danger">145.21</td>
+                            </tr>
+                              <tr>
+                                <td>871</td>
+                                <td>361</td>
+                                <td>13</td>
+                                <td class="text-danger">145.21</td>
+                            </tr>
+                              <tr>
+                                <td>851</td>
+                                <td>331</td>
+                                <td>15</td>
+                                <td class="text-danger">145.21</td>
+                            </tr>
 
                         </tbody>
                     </table>
@@ -61,7 +85,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6">
             <div class="card">
                 <div class="card-header" data-background-color="red">
                     <h4 class="title"> Score Card </h4>
@@ -74,54 +98,15 @@
                         <option value="opel">07/23/2017</option>
                         <option value="audi">07/22/2017</option>
                     </select>
-                    <pie-chart></pie-chart>
-                    <line-chart></line-chart>
-                    <div>
-                        <svg height="120" width="120">
-                            <defs>
-                                <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
-                                    <stop offset="0%" style="stop-color:rgb(255,0,0);stop-opacity:1" />
-                                    <stop offset="100%" style="stop-color:rgb(255,0,0);stop-opacity:1" />
-                                </linearGradient>
-                            </defs>
-                            <ellipse cx="70" cy="70" rx="50" ry="50" fill="url(#grad1)" />
-                            <text fill="#ffffff" font-size="10" font-family="Verdana" x="50" y="75">3 Routes</text>
-                            Sorry, your browser does not support inline SVG.
-                        </svg>
-                        <svg height="120" width="120">
-                            <defs>
-                                <linearGradient id="grad2" x1="0%" y1="0%" x2="100%" y2="0%">
-                                    <stop offset="0%" style="stop-color:rgb(34,139,34);stop-opacity:1" />
-                                    <stop offset="100%" style="stop-color:rgb(34,139,34);stop-opacity:1" />
-                                </linearGradient>
-                            </defs>
-                            <ellipse cx="70" cy="70" rx="50" ry="50" fill="url(#grad2)" />
-                            <text fill="#ffffff" font-size="10" font-family="Verdana" x="45" y="75">100 Tickets</text>
-                            Sorry, your browser does not support inline SVG.
-                        </svg>
-                        <svg height="120" width="120">
-                            <defs>
-                                <linearGradient id="grad3" x1="0%" y1="0%" x2="100%" y2="0%">
-                                    <stop offset="0%" style="stop-color:rgb(255,165,0);stop-opacity:1" />
-                                    <stop offset="100%" style="stop-color:rgb(255,165,0);stop-opacity:1" />
-                                </linearGradient>
-                            </defs>
-                            <ellipse cx="70" cy="70" rx="50" ry="50" fill="url(#grad3)" />
-                            <text fill="#ffffff" font-size="10" font-family="Verdana" x="35" y="75">$12,12.00 Sale</text>
-                            Sorry, your browser does not support inline SVG.
-                        </svg>
-                        <svg height="120" width="120">
-                            <defs>
-                                <linearGradient id="grad4" x1="0%" y1="0%" x2="100%" y2="0%">
-                                    <stop offset="0%" style="stop-color:rgb(135,206,250);stop-opacity:1" />
-                                    <stop offset="100%" style="stop-color:rgb(135,206,250);stop-opacity:1" />
-                                </linearGradient>
-                            </defs>
-                            <ellipse cx="70" cy="70" rx="50" ry="50" fill="url(#grad4)" />
-                            <text fill="#ffffff" font-size="10" font-family="Verdana" x="25" y="75">32 Skipped Routes</text>
-                            Sorry, your browser does not support inline SVG.
-                        </svg>
+                    <div class="row">
+                        <div class="col-md-6"> <pie-chart></pie-chart></div>
+                       <div class="col-md-6"> <line-chart></line-chart></div>
+                       <div class="col-md-6"> <donought-chart></donought-chart></div>
+                       <div class="col-md-6"> <line-chart></line-chart></div>
                     </div>
+                    
+                   
+                    
                 </div>
             </div>
         </div>
