--- a/src/app/dashboard/notifications/notifications.component.html
+++ b/src/app/dashboard/notifications/notifications.component.html
@@ -1,4 +1,4 @@
-<div class="main-content">
+<!-- <div class="main-content">
     <div class="container-fluid">
         <div class="card">
             <div class="card-header" data-background-color="red">
@@ -93,4 +93,5 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
+<h1>In progress...</h1>
