--- a/src/app/dashboard/upgrade/upgrade.component.html
+++ b/src/app/dashboard/upgrade/upgrade.component.html
@@ -1,4 +1,4 @@
-<div class="main-content">
+<!-- <div class="main-content">
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
@@ -75,4 +75,5 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
+<h1 style="margin-bottom:100%">In progress...</h1>
