--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer style="background: #0076bc">
+<footer style="background: #0076bc;" >
     <div class="container-fluid">
         <!--<nav class="pull-left">
             <ul>
@@ -24,7 +24,7 @@
                 </li>
             </ul>
         </nav>-->
-        <p class="footer" style="font-size:10px;color:#fff;background:#0076bc; text-align: center">
+        <p class="footer" style="font-size:12px;color:#fff;background:#0076bc; text-align: center">
             &copy; Please note that while you are reviewing any information on this website, the information is posted as of the dates listed. Reddy Ice has no obligation to update the information in the email alerts or otherwise from this website, which speak as
             of their respective dates.
         </p>
