Made heaader footer sticky Formatted layout for scrollable area

--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -54,30 +54,25 @@
                                 <td>11</td>
                                 <td class="text-danger">145.21</td>
                             </tr>
-                              <tr>
+                            <tr>
                                 <td>891</td>
                                 <td>381</td>
                                 <td>16</td>
                                 <td class="text-danger">145.21</td>
                             </tr>
-                              <tr>
+                            <tr>
                                 <td>891</td>
                                 <td>381</td>
                                 <td>18</td>
                                 <td class="text-danger">145.21</td>
                             </tr>
-                              <tr>
+                            <tr>
                                 <td>871</td>
                                 <td>361</td>
                                 <td>13</td>
                                 <td class="text-danger">145.21</td>
                             </tr>
-                              <tr>
-                                <td>851</td>
-                                <td>331</td>
-                                <td>15</td>
-                                <td class="text-danger">145.21</td>
-                            </tr>
+
 
                         </tbody>
                     </table>
@@ -99,14 +94,22 @@
                         <option value="audi">07/22/2017</option>
                     </select>
                     <div class="row">
-                        <div class="col-md-6"> <pie-chart></pie-chart></div>
-                       <div class="col-md-6"> <line-chart></line-chart></div>
-                       <div class="col-md-6"> <donought-chart></donought-chart></div>
-                       <div class="col-md-6"> <line-chart></line-chart></div>
+                        <div class="col-md-6">
+                            <pie-chart></pie-chart>
+                        </div>
+                        <div class="col-md-6">
+                            <line-chart></line-chart>
+                        </div>
+                        <div class="col-md-6">
+                            <donought-chart></donought-chart>
+                        </div>
+                        <div class="col-md-6">
+                            <line-chart></line-chart>
+                        </div>
                     </div>
-                    
-                   
-                    
+
+
+
                 </div>
             </div>
         </div>
