--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,5 +1,5 @@
-<footer style="background: #0076bc;" >
-    <div class="container-fluid">
+<footer class="ice-footer">
+    <div class="">
         <!--<nav class="pull-left">
             <ul>
                 <li>
@@ -24,8 +24,8 @@
                 </li>
             </ul>
         </nav>-->
-        <p class="footer" style="font-size:12px;color:#fff;background:#0076bc; text-align: center">
-            &copy; Please note that while you are reviewing any information on this website, the information is posted as of the dates listed. Reddy Ice has no obligation to update the information in the email alerts or otherwise from this website, which speak as
+        <p>
+            &copy; Please note that while you are reviewing any information on this portal, the information is posted as of the dates listed. Reddy Ice has no obligation to update the information in the email alerts or otherwise from this website, which speak as
             of their respective dates.
         </p>
     </div>
