--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -1,8 +1,5 @@
-
-.logo-img img{width: 260px;
-    top: 0px;
-    position: absolute;
-    left: 0;}
-.logo{
-    height: 100px;
+.logo-img img {
+    width: 170px;
 }
+
+.logo {}
