--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
+
+.main-panel,
+.wrapper {
+    overflow: hidden;
+}
+
+.main-content {
+    margin-top: 70px;
+    padding: 10px 15px !important;
+    height: calc(100% - 125px) !important;
+    overflow-y: scroll;
+}
+
+.ice-footer {
+    background: #0076bc;
+}
+
+.ice-footer p {
+    font-size: 12px;
+    color: #fff;
+    background: #0076bc;
+    text-align: center;
+    padding: 10px;
+    margin-bottom: 0px;
+}
