--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -7,9 +7,35 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">{{getTitle()}}</a>
+            <a class="navbar-brand"></a>
         </div>
-        <div class="collapse navbar-collapse">
+        <div class="user-icon">
+
+            <div class="row">
+                <div class="col-md-5">
+                    <a class="app-heading navbar-brand">My Icebox </a>
+                </div>
+                <div class="col-md-3">
+                    <p class="text-right padding-top"> Select Branch/Location</p>
+                </div>
+                <div class="col-md-2">
+                    <select class="form-control">
+						  <option value="volvo">301/301</option>
+						  <option value="saab">302/302</option>
+						  <option value="opel">303/303</option>
+						</select>
+                </div>
+                <div class="col-md-2 text-right">
+                    <span class="user-name">John Hue</span>
+                    <i class="material-icons">person</i>
+                </div>
+            </div>
+
+        </div>
+
+
+
+        <!--<div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li>
                     <a  class="dropdown-toggle" data-toggle="dropdown">
@@ -33,6 +59,6 @@
                 </li>
             </ul>
             
-        </div>
+        </div>-->
     </div>
 </nav>
