--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -12,8 +12,8 @@
                 </div>
                 <div class="card-content table-responsive">
                     <div class="row">
-                        <div class="col-12">
-                            <input class="form-control" type="date">
+                        <div class="col-md-12">
+                            <date-picker></date-picker>
                         </div>
                     </div>
                     <table class="table">
@@ -63,15 +63,7 @@
                                 <td>Peter</td>
                                 <td>18</td>
                                 <td class="text-danger">145.21</td>
-                            </tr>
-                            <tr>
-                                <td>871</td>
-                                <td>Chris</td>
-                                <td>13</td>
-                                <td class="text-danger">145.21</td>
-                            </tr>
-
-
+                            </tr>                            
                         </tbody>
                     </table>
 
@@ -85,12 +77,7 @@
 
                 </div>
                 <div class="card-content table-responsive">
-                    <select class="form-control">
-                        <option value="volvo">07/24/2017</option>
-                        <option value="saab">07/25/2017</option>
-                        <option value="opel">07/23/2017</option>
-                        <option value="audi">07/22/2017</option>
-                    </select>
+                    <date-picker></date-picker>
                     <div class="row">
                         <div class="col-md-6">
                             <pie-chart></pie-chart>
