--- a/src/app/dashboard/maps/maps.component.html
+++ b/src/app/dashboard/maps/maps.component.html
@@ -1,1 +1,292 @@
-<h1 style="margin-bottom:100%">In progress...</h1>
+<!-- <h1 style="margin-bottom:100%">In progress...</h1> -->
+
+<!-- side main section -->
+
+<div class="main-content">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card">
+                <div class="card-header" data-background-color="red">
+                    <h4 class="title">Customer Management </h4>
+                </div>
+                <div class="card-content">
+                    <div>
+                        <h4>Distributor : Dist-001</h4>
+                        <div>
+                            <div style="display:inline-block;">
+                                <a href="#pablo" class="btn btn-danger btn-round">Set Generic Price</a>
+                            </div>
+                            <div style="display:inline-block;margin-left:25px;">
+                                <a href="#pablo" class="btn btn-danger btn-round">Add Customer</a>
+                            </div>
+                        </div>
+                        <input type="text" class="form-control" placeholder="Search">
+                        <div class="table-responsive">
+                            <table class="table">
+                                <thead class="text-danger">
+                                    <tr>
+                                        <th>
+                                            Select
+                                        </th>
+                                        <th>
+                                            Customer#
+                                        </th>
+                                        <th>
+                                            Customer Name
+                                        </th>
+                                        <th>
+                                            RI Customer
+                                        </th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td><input type="radio" name="custMgmt" checked></td>
+                                        <td>311</td>
+                                        <td>Jack Kelsey</td>
+                                        <td class="text-danger">Y</td>
+                                    </tr>
+                                    <tr>
+                                        <td><input type="radio" name="custMgmt"></td>
+                                        <td>331</td>
+                                        <td>Shaun Michael</td>
+                                        <td class="text-danger">N</td>
+                                    </tr>
+                                    <tr>
+                                        <td><input type="radio" name="custMgmt"></td>
+                                        <td>351</td>
+                                        <td>Gill Ambrose</td>
+                                        <td class="text-danger">N</td>
+                                    </tr>
+                                    <tr>
+                                        <td><input type="radio" name="custMgmt"></td>
+                                        <td>381</td>
+                                        <td>Jill Franko</td>
+                                        <td class="text-danger">Y</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- side main section -->
+
+<!-- side right section 
+
+<div class="main-content"> 
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card">
+                <div style="margin:15px 25px;">
+                    <div style="margin: 20px 0px;display: inline-block;font-size: 18px;">Add New Customer</div>
+                    <a href="#pablo" class="btn btn-danger btn-round" style="float:right;">Save</a>
+                </div>
+                <div class="card-content">
+                    <form>
+                        <div class="row">
+                            <div class="col-md-3">
+                                <div class="form-group form-black label-floating is-empty" style="margin-left: 78px;">
+                                    <label class="control-label">Customer Name</label>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="form-group form-black label-floating is-empty">
+                                    <input type="text" class="form-control">
+                                </div>
+                            </div>
+                            <div class="col-md-2">
+                                <div class="form-group form-black label-floating is-empty" style="margin-left: 78px;">
+                                    <label class="control-label">Type</label>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="" style="margin-right: 78px;margin-top: 25px;">
+                                    <select class="form-control">
+                                        <option value="volvo">Select Type</option>
+                                        <option value="saab">Cocktail</option>
+                                        <option value="opel">Icepack</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-3">
+                                <div class="form-group form-black label-floating is-empty" style="margin-left: 78px;">
+                                    <label class="control-label">Customer #</label>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="form-group form-black label-floating is-empty">
+                                    <input type="text" class="form-control">
+                                </div>
+                            </div>
+                            <div class="col-md-2">
+                                <div class="form-group form-black label-floating is-empty" style="margin-left: 78px;">
+                                    <label class="control-label">Location</label>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="" style="margin-right: 78px;margin-top: 25px;">
+                                    <select class="form-control">
+                                        <option value="volvo">301/301</option>
+                                        <option value="saab">302/302</option>
+                                        <option value="opel">303/303</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-3">
+                                <div class="form-group form-black label-floating is-empty" style="margin-left: 78px;">
+                                    <label class="control-label">Branch</label>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="" style="margin-right: 78px;margin-top: 25px;">
+                                    <select class="form-control">
+                                        <option value="volvo">301/301</option>
+                                        <option value="saab">302/302</option>
+                                        <option value="opel">303/303</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-3">
+                                <div class="form-group form-black label-floating is-empty" style="margin-left: 78px;">
+                                    <label class="control-label">Address</label>
+                                </div>
+                            </div>
+                            <div class="col-md-9">
+                                <div class="form-group form-black label-floating is-empty" style="margin-right: 78px;">
+                                    <input type="text" class="form-control">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-2">
+                                <div class="form-group form-black label-floating is-empty" style="margin-left: 78px;">
+                                    <label class="control-label">City</label>
+                                </div>
+                            </div>
+                            <div class="col-md-2">
+                                <div class="form-group form-black label-floating is-empty">
+                                    <input type="text" class="form-control">
+                                </div>
+                            </div>
+                            <div class="col-md-2">
+                                <div class="form-group form-black label-floating is-empty" style="margin-left: 65px;">
+                                    <label class="control-label">State</label>
+                                </div>
+                            </div>
+                            <div class="col-md-2">
+                                <div class="form-group form-black label-floating is-empty">
+                                    <input type="text" class="form-control">
+                                </div>
+                            </div>
+                            <div class="col-md-1">
+                                <div class="form-group form-black label-floating is-empty" style="margin-left: 30px;">
+                                    <label class="control-label">Zip</label>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="form-group form-black label-floating is-empty" style="margin-right: 78px;">
+                                    <input type="text" class="form-control">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-3">
+                                <div class="form-group form-black label-floating is-empty" style="margin-left: 78px;">
+                                    <label class="control-label">Phone</label>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="form-group form-black label-floating is-empty">
+                                    <input type="text" class="form-control">
+                                </div>
+                            </div>
+                            <div class="col-md-2">
+                                <div class="form-group form-black label-floating is-empty" style="margin-left: 78px;">
+                                    <label class="control-label">Location</label>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="form-group form-black label-floating is-empty" style="margin-right: 78px;">
+                                    <input type="text" class="form-control">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="card-content table-responsive" style="margin-left: 50px;">
+                                    <table class="table">
+                                        <thead class="text-danger">
+                                            <tr>
+                                                <th>
+                                                    Product
+                                                </th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>Cocktail-20</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Cocktail-10</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Cocktail-30</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                            <div class="col-md-2" style="text-align: center;padding-top: 100px;">
+                                <p><span class="glyphicon glyphicon-arrow-left"></span></p>
+                                <p><span class="glyphicon glyphicon-arrow-right"></span></p>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="card-content table-responsive" style="margin-right: 54px;">
+                                    <table class="table">
+                                        <thead class="text-danger">
+                                            <tr>
+                                                <th>
+                                                    Product
+                                                </th>
+                                                <th>
+                                                    Price
+                                                </th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>Cocktail-20</td>
+                                                <td>$112</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Cocktail-10</td>
+                                                <td>$154</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Cocktail-30</td>
+                                                <td>$75</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- side right section -->
