--- a/src/app/dashboard/maps/maps.component.html
+++ b/src/app/dashboard/maps/maps.component.html
@@ -26,9 +26,6 @@
                                 <thead class="text-danger">
                                     <tr>
                                         <th>
-                                            Select
-                                        </th>
-                                        <th>
                                             Customer#
                                         </th>
                                         <th>
@@ -37,32 +34,39 @@
                                         <th>
                                             RI Customer
                                         </th>
+                                        <th>
+                                            Action
+                                        </th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td><input type="radio" name="custMgmt" checked></td>
+                                        
                                         <td>311</td>
                                         <td>Jack Kelsey</td>
                                         <td class="text-danger">Y</td>
+                                        <td><span class="glyphicon glyphicon-edit"></span></td>
                                     </tr>
                                     <tr>
-                                        <td><input type="radio" name="custMgmt"></td>
+                                        
                                         <td>331</td>
                                         <td>Shaun Michael</td>
                                         <td class="text-danger">N</td>
+                                        <td><span class="glyphicon glyphicon-edit"></span></td>
                                     </tr>
                                     <tr>
-                                        <td><input type="radio" name="custMgmt"></td>
+                                        
                                         <td>351</td>
                                         <td>Gill Ambrose</td>
                                         <td class="text-danger">N</td>
+                                        <td><span class="glyphicon glyphicon-edit"></span></td>
                                     </tr>
                                     <tr>
-                                        <td><input type="radio" name="custMgmt"></td>
+                                        
                                         <td>381</td>
                                         <td>Jill Franko</td>
                                         <td class="text-danger">Y</td>
+                                        <td><span class="glyphicon glyphicon-edit"></span></td>
                                     </tr>
                                 </tbody>
                             </table>
