--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -12,11 +12,11 @@
         <div class="user-icon">
 
             <div class="row">
-                <div class="col-md-5">
+                <div class="col-md-4">
                     <a class="app-heading navbar-brand">My Icebox </a>
                 </div>
-                <div class="col-md-3">
-                    <p class="text-right padding-top"> Select Branch/Location</p>
+                <div class="col-md-3 text-right">
+                    <label class="padding-top"> Select Branch/Location</label>
                 </div>
                 <div class="col-md-2">
                     <select class="form-control">
@@ -25,9 +25,9 @@
 						  <option value="opel">303/303</option>
 						</select>
                 </div>
-                <div class="col-md-2 text-right">
-                    <span class="user-name">John Hue</span>
-                    <i class="material-icons">person</i>
+                <div class="col-md-3 text-right">
+                    <label class="user-name">John Hue</label>
+                    <i class="material-icons person-icon">person</i>
                 </div>
             </div>
 
