--- a/src/styles.css
+++ b/src/styles.css
@@ -24,3 +24,9 @@
     padding: 10px;
     margin-bottom: 0px;
 }
+.padding-top {
+    padding-top: 10px;
+}
+ .text-right {
+        text-align: right;
+    }
