--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -12,7 +12,10 @@
                 </div>
                 <div class="card-content table-responsive">
                     <div class="row">
-                        <div class="col-md-12">
+                        <div class="col-md-8 text-right padding-top">
+                            <label>Select Date</label>
+                        </div>
+                         <div class="col-md-4">
                             <date-picker></date-picker>
                         </div>
                     </div>
@@ -77,7 +80,14 @@
 
                 </div>
                 <div class="card-content table-responsive">
-                    <date-picker></date-picker>
+                   <div class="row">
+                        <div class="col-md-8 text-right padding-top">
+                            <label>Select Date</label>
+                        </div>
+                         <div class="col-md-4">
+                            <date-picker></date-picker>
+                        </div>
+                    </div>
                     <div class="row">
                         <div class="col-md-6">
                             <pie-chart></pie-chart>
