--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -5,21 +5,21 @@
     min-height: 70px;
     margin-bottom: 0px;
 }
-
+.person-icon{
+    font-size: 40px !important;
+}
 .user-icon {
     width: 80%;
     position: absolute;
     top: 0px;
     right: 0px;
     padding-top: 10px;
-    padding-right: 10px;
+    padding-right: 30px;
     .user-name {
-        padding: 5px;
-        vertical-align: super;
+       padding: 8px 0px;
+    vertical-align: bottom;
     }
-    .text-right {
-        text-align: right;
-    }
+   
     .app-heading {
         font-size: 27px;
         color: #0076bc;
@@ -28,6 +28,3 @@
     }
 }
 
-.padding-top {
-    padding-top: 10px;
-}
